--- a/index.css
+++ b/index.css
@@ -2,7 +2,11 @@
     margin: 60px 0 0;
 }
 
-.result-container:before {
+.result-container {
+    padding: 20px;
+}
+
+.call-to-action:before {
     content: '';
     background: url(artwork/arrow-down.png);
     width: 200px;
