--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@
     text-align: right;
     font-size: 36px;
     line-height: 30px;
+    margin-top: 20px;
     color: #999;
     width: 200px;
 }
